--- a/ops/backend_ci_deploy.yml
+++ b/ops/backend_ci_deploy.yml
@@ -1,118 +1,66 @@
-name: Backend (Python/Flask) - Build, Deploy & Migrate DB
+name: Backend (Python/Flask) - CI & Trigger Render Deploy (DEV)
 
 on:
   push:
     branches:
-      - main
+      - dev # Uruchamia się tylko przy pushu do gałęzi 'dev'
   pull_request:
     branches:
-      - main
+      - dev # Uruchamia się przy Pull Requestach do gałęzi 'dev'
 
 jobs:
   # =======================================================
-  # JOB 1: BUILD I TESTY (Continuous Integration)
-  # Buduje obraz Dockera i wypycha go do GitHub Container Registry (GHCR)
+  # JOB 1: TESTY (Continuous Integration)
+  # Weryfikuje kod Pythona przed rozpoczęciem deploymentu.
   # =======================================================
-  build_and_push_docker:
-    name: Build, Test & Push Docker Image
+  ci_tests:
+    name: Run Python CI Tests
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write # Wymagane, aby pisać do GHCR
-
+    
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # --- Konfiguracja i Testowanie ---
+      # --- Konfiguracja Pythona ---
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-          cache-dependency-path: backend/requirements.txt # Katalog ze zależnościami
+          # Monitorowanie pliku zależności, aby przyspieszyć instalację
+          cache-dependency-path: backend/requirements.txt 
           
       - name: Install dependencies
         working-directory: ./backend
         run: pip install -r requirements.txt
         
+      # --- Krok Testowy ---
       - name: Run Backend Tests (Pytest)
         working-directory: ./backend
         run: python -m pytest 
         
-      # --- Build i Push Dockera ---
-      - name: Log in to GitHub Container Registry (GHCR)
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }} # Token udostępniony automatycznie przez GitHub Actions
-          
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Docker Metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}-backend 
-          tags: |
-            type=sha,prefix=,suffix=,format=short
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-
-      - name: Build and Push Docker image to GHCR
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend # Kontekst budowania: katalog 'backend'
-          push: ${{ github.ref == 'refs/heads/main' }} 
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
   # =======================================================
-  # JOB 2: DEPLOY I MIGRACJA BAZY DANYCH (Continuous Deployment)
+  # JOB 2: DEPLOY (Trigger Render Hook)
+  # Uruchamiany tylko na gałęzi 'dev' po sukcesie testów.
   # =======================================================
-  deploy_and_migrate:
-    name: Deploy Image and Run Migrations
+  deploy:
+    name: Trigger Render Deployment
     runs-on: ubuntu-latest
-    needs: build_and_push_docker # Zależność: uruchomi się tylko po sukcesie Joba 1
-    environment: production
+    needs: ci_tests # Wymaga udanego przejścia testów z Joba 1
+    environment: dev # Przypisanie do środowiska 'dev'
     
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        
-      # --- Konfiguracja Pythona (do uruchomienia skryptu migracji) ---
-      - name: Set up Python for Migrations
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-          cache: 'pip'
-          cache-dependency-path: backend/requirements.txt
-          
-      - name: Install dependencies
-        working-directory: ./backend
-        run: pip install -r requirements.txt
-        
-      # --- Uruchomienie Migracji Bazy Danych (przez SSH) ---
-      - name: Run DB Migrations via SSH
-        uses: appleboy/ssh-action@v1.0.1
-        with:
-          host: ${{ secrets.SSH_HOST }} 
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          # Polecenie jest wykonywane zdalnie na serwerze:
-          script: |
-            echo "Running database migrations..."
-            /usr/bin/python /opt/pocketurl/backend/manage.py db upgrade
-            
-      # --- Wywołanie Wdrożenia Usługi (Restart Render) ---
-      - name: Restart Render Web Service
+      # --- Wywołanie Wdrożenia Render.com ---
+      - name: Setup Node.js (do curl)
+        # Instalujemy Node.js, ponieważ akcja 'curl' może być łatwiej dostępna
+        # przy użyciu tego runnera Node.
         uses: actions/setup-node@v4 
         with:
-            node-version: '20'
+            node-version: '20' 
             
-      - name: Trigger Render Backend Deployment
-        # Wywołanie Hooka, aby poinformować Render, że ma pobrać nowy obraz Dockera z GHCR
+      - name: Send Deploy Request to Render
+        # Używamy Hooka, aby poinformować Render, że ma pobrać kod z gałęzi 'dev' i zdeployować.
+        # Wartość jest pobierana z GitHub Secret.
         run: curl -X POST ${{ secrets.BACKEND_RENDER_HOOK }}
         env:
           BACKEND_RENDER_HOOK: ${{ secrets.BACKEND_RENDER_HOOK }}
