--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 flask==3.0.3
-flask-cors==4.0.1
-gunicorn==21.2.0
+flask-cors>=6.0.0
+gunicorn==22.0.0
 pytest==8.3.3
 SQLAlchemy==2.0.44
 python-dotenv==1.2.1
