--- a/.github/workflows/backend_ci_deploy.yml
+++ b/.github/workflows/backend_ci_deploy.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Run Code Formatter Check (Black)
         working-directory: ./backend
         run: black . --check 
+
+        ##tutumtuum
         
       # --- Krok 2: Kontrola Stylu/Linting ---
       - name: Run Code Linter (Flake8)
