--- a/.github/workflows/backend_ci_deploy.yml
+++ b/.github/workflows/backend_ci_deploy.yml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: ci_tests
     environment: dev
-    if: github.ref == 'refs/heads/dev'
+    # if: github.ref == 'refs/heads/dev'
     
     steps:
       - name: Setup Node.js (dla curl)
@@ -54,18 +54,18 @@ jobs:
       - name: Send Deploy Request to Render DEV
         run: curl -X POST ${{ secrets.BACKEND_RENDER_HOOK_DEV }}
 
-  deploy_prod:
-    name: Trigger Render Deployment (PROD)
-    runs-on: ubuntu-latest
-    needs: ci_tests
-    environment: prod
-    if: github.ref == 'refs/heads/main'
+  # deploy_prod:
+  #   name: Trigger Render Deployment (PROD)
+  #   runs-on: ubuntu-latest
+  #   needs: ci_tests
+  #   environment: prod
+  #   if: github.ref == 'refs/heads/main'
     
-    steps:
-      - name: Setup Node.js (dla curl)
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20' 
+  #   steps:
+  #     - name: Setup Node.js (dla curl)
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20' 
             
-      - name: Send Deploy Request to Render PROD
-        run: curl -X POST ${{ secrets.BACKEND_RENDER_HOOK_PROD }}
+  #     - name: Send Deploy Request to Render PROD
+  #       run: curl -X POST ${{ secrets.BACKEND_RENDER_HOOK_PROD }}
