--- a/.github/workflows/backend_ci_deploy.yml
+++ b/.github/workflows/backend_ci_deploy.yml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: ci_tests
     environment: dev
-    # if: github.ref == 'refs/heads/dev'
+    # if: github.ref == 'refs/heads/dev' a
     
     steps:
       - name: Setup Node.js (dla curl)
