--- a/ops/render.yaml
+++ b/ops/render.yaml
@@ -22,7 +22,7 @@ projects:
           - type: web
             plan: free
             runtime: node
-            name: pocket-url-frontend-dev
+            name: pocket-url-frontend-dev-2
             repo: https://github.com/TheAdduser/PocketURL
             branch: dev
             buildCommand: |
