--- a/render.yaml
+++ b/render.yaml
@@ -24,7 +24,7 @@ projects:
           - type: web
             plan: free
             runtime: node
-            name: pocket-url-frontend-dev-2
+            name: pocket-url-frontend-dev
             repo: https://github.com/TheAdduser/PocketURL
             branch: dev
             buildCommand: |
