--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ projects:
               - key: CORS_ALLOW_ALL
                 value: "true"
               - key: DB_CONNECTION_STRING
-                value: ""
+                value: ${{ secrets.db_string }}
 
 
           - type: web
