--- a/.github/workflows/backend_ci_deploy.yml
+++ b/.github/workflows/backend_ci_deploy.yml
@@ -11,6 +11,28 @@ on:
       - main
 
 jobs:
+  unit_tests:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+          
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+          cache-dependency-path: backend/requirements.txt
+          
+      - name: Install Pytest
+        working-directory: ./backend
+        run: pip install pytest
+
+      - name: Run pytest
+        working-directory: ./backend
+        run: pytest
+
   ci_tests:
     name: Run Python CI/Security Tests
     runs-on: ubuntu-latest
